chore: Refactor button alignment, fix broken links, and update styles and menus

--- a/styles.css
+++ b/styles.css
@@ -68,13 +68,13 @@ a:hover {
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
-  margin-bottom: 20px; /* Espaçamento vertical entre os cartões */
+  margin-bottom: 20px; 
 }
 
 .card-body {
   display: flex;
   flex-direction: column;
-  flex: 1; /* Permite que o card-body cresça para ocupar o espaço disponível */
+  flex: 1; 
 }
 
 .card-body .form-check {
@@ -84,9 +84,9 @@ a:hover {
 }
 
 .card-img-top {
-  width: 100%; /* A largura será 100% do contêiner pai */
-  height: 200px; /* Altura fixa para todas as imagens */
-  object-fit: cover; /* A imagem será redimensionada para cobrir o contêiner, preservando a proporção */
+  width: 100%; 
+  height: 200px; 
+  object-fit: cover; 
   border-bottom: 0;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
@@ -96,13 +96,13 @@ a:hover {
 .row {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between; /* Espaçamento horizontal */
+  justify-content: space-between; 
 }
 
 .col-md-4 {
   display: flex;
   flex-direction: column;
-  margin-bottom: 20px; /* Espaçamento vertical entre cartões */
+  margin-bottom: 20px; 
 }
 
 .form-check-label {
@@ -111,6 +111,6 @@ a:hover {
 
 .vehicle-img {
   width: 100%;
-  height: 200px; /* Ajuste a altura conforme necessário */
-  object-fit: cover; /* Esta propriedade define como o conteúdo da imagem deve se ajustar às dimensões definidas */
+  height: 200px; 
+  object-fit: cover; /
 }
